bug fixes for R2 and R3

--- a/snippets/header-logo.liquid
+++ b/snippets/header-logo.liquid
@@ -1,4 +1,4 @@
-<div class="four columns logo desktop_only_inline">
+<div class="four columns logo">
   <a href="{{ shop.url }}" title="{{ shop.name }}">
     {% if settings.use_logo %}
       <img src="{{ 'logo.png' | asset_url }}" alt="{{ shop.name }}" data-src="{{ 'logo.png' | asset_url }}" {% if settings.use_logo_home %}data-src-home="{{ 'logo_home.png' | asset_url }}"{% endif %} />
