--- a/snippets/header-navigation.liquid
+++ b/snippets/header-navigation.liquid
@@ -3,7 +3,7 @@
     <div class="alpha eight columns">
       <ul class="menu">
         <li>
-          <a href="/collections/baby-swaddles-and-sleep-sacks" title="Shop v2" class="top-link sub-menu">Shop</a>
+          <a href="/collections/baby-swaddles-and-sleep-sacks" title="Shop" class="top-link sub-menu">Shop</a>
           <div class="dropdown dropdown-wide">
             <ul>
               <li><a href="/collections/swaddle" title="Swaddles">Swaddles</a></li>
@@ -20,7 +20,7 @@
             </ul>
             <ul>
               <li><a href="/collections/baby-swaddles-and-sleep-sacks" title="Bundles">Bundles</a></li>
-              <li><a class="sub-link" href="products/package-of-little-lotus-swaddle-sleeping-bag-combo-1-swaddle-1-sleeping-bag-1?variant=11290032902" title="Swaddle &amp; Sleeping Bags">Swaddle &amp; Sleeping Bags</a></li>
+              <li><a class="sub-link" href="/products/package-of-little-lotus-swaddle-sleeping-bag-combo-1-swaddle-1-sleeping-bag-1?variant=11290032902" title="Swaddle &amp; Sleeping Bags">Swaddle &amp; Sleeping Bags</a></li>
               <li><a class="sub-link" href="/collections/combos" title="Sleeping Bags">Sleeping Bags</a></li>
             </ul>
             <ul>
