removing unnecessary styling for image-slice

--- a/snippets/snippet-homepage--helping_hand.liquid
+++ b/snippets/snippet-homepage--helping_hand.liquid
@@ -2,7 +2,7 @@
   <div class="container content">
     <div class="eight columns alpha">
       <span class="section-image">
-        <img src="{{ 'helping-hand.jpg' | asset_url }}" alt="Helping Hand" class="section-image">
+        <img src="{{ 'helping-hand.jpg' | asset_url }}" alt="Helping Hand">
       </span>
     </div>
     <div class="content-container seven omega columns offset-by-one">
