updating to have border and height changes

--- a/assets/styles-v2.css.liquid
+++ b/assets/styles-v2.css.liquid
@@ -367,11 +367,13 @@ picture,img { max-width: 100%; }
   max-width: 360px;
   max-height: 200px;
   width: 60%;
-  height: 100%;
+  height: 95%;
   display: block;
   content: "";
   z-index: -1;
   opacity: .75;
+
+  border: 7px solid transparent;
 
   -webkit-border-image: url('svg-icon--x_border.svg?20161114') 60 round;
   -moz-border-image: url('svg-icon--x_border.svg?20161114') 60 round;
