--- a/assets/styles-v2.css.liquid
+++ b/assets/styles-v2.css.liquid
@@ -373,13 +373,10 @@ picture,img { max-width: 100%; }
   z-index: -1;
   opacity: .75;
 
-  border: 7px solid transparent;
-
-  -webkit-border-image: url('svg-icon--x_border.svg?20161114') 60 round;
-  -moz-border-image: url('svg-icon--x_border.svg?20161114') 60 round;
-  -ms-border-image: url('svg-icon--x_border.svg?20161114') 60 round;
-  -o-border-image: url('svg-icon--x_border.svg?20161114') 60 round;
-  border-image: url('svg-icon--x_border.svg?20161114') 60 round;
+  background-image: url('svg-border.svg');
+  background-repeat: no-repeat;
+  backgrounc-position: center center;
+  background-size: contain;
 
 }
 .section-homepage--helping_hand .section-image:before {
@@ -422,11 +419,6 @@ picture,img { max-width: 100%; }
   .section-homepage--helping_hand > div { text-align: center; }
   .section-homepage--helping_hand .section-image:before,
   .section-homepage--helping_hand .section-image:after {
-    -webkit-border-image-slice: 30;
-    -moz-border-image-slice: 30;
-    -ms-border-image-slice: 30;
-    -o-border-image-slice: 30;
-    border-image-slice: 30;
   }
   .section-homepage--helping_hand .section-title--hed {
     margin-top: 40px;
@@ -451,12 +443,6 @@ picture,img { max-width: 100%; }
   .section-homepage--helping_hand .section-image:after {
     max-width: 80%;
     max-height: 80%;
-    -webkit-border-image-slice: 40;
-    -moz-border-image-slice: 40;
-    -ms-border-image-slice: 40;
-    -o-border-image-slice: 40;
-    border-image-slice: 40;
-    border-size: 6px;
   }
   .section-homepage--helping_hand .section-image:before {
     top: -15px;
@@ -475,11 +461,6 @@ picture,img { max-width: 100%; }
   .section-homepage--helping_hand .section-image:after {
     max-width: 360px;
     max-height: 200px;
-    -webkit-border-image-slice: 40;
-    -moz-border-image-slice: 40;
-    -ms-border-image-slice: 40;
-    -o-border-image-slice: 40;
-    border-image-slice: 40;
   }
   .section-homepage--helping_hand .section-image:before {
     top: -15px;
@@ -749,24 +730,26 @@ picture,img { max-width: 100%; }
 .section-homepage--module_two_column .content-box {
   position: relative;
   margin: 50px 0 50px 50px;
-  padding: 20px;
+  padding: 20px 20px 10px 20px;
   min-width: 38%;
   background-color: rgba(255, 255, 255, .95);
   text-align: center;
 }
 .section-homepage--module_two_column .content-box:after {
   position: absolute;
-  width: calc(100% - 27px);
-  height: calc(100% - 27px);
-  right: 7px;
-  bottom: 7px;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   content: "";
-  border: 7px solid transparent;
-  -webkit-border-image: url('svg-icon--x_border_alternate.svg?20161114') 44 round;
-  -moz-border-image: url('svg-icon--x_border_alternate.svg?20161114') 44 round;
-  -ms-border-image: url('svg-icon--x_border_alternate.svg?20161114') 44 round;
-  -o-border-image: url('svg-icon--x_border_alternate.svg?20161114') 44 round;
-  border-image: url('svg-icon--x_border_alternate.svg?20161114') 44 round;
+
+  background-image: url('svg-border-pink.svg');
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-size: calc(100% - 20px);
+
 }
 .section-homepage--module_two_column .section-title--hed {
   margin-bottom: 0;
@@ -797,9 +780,15 @@ picture,img { max-width: 100%; }
   .section-homepage--module_two_column .section-homepage--module {
     margin-top: 20px;
     background-position: top center;
+    padding: 20px 0;
+    overflow: hidden;
   }
-}
-@media only screen and (max-width: 767px) {
+  .section-homepage--module_two_column .content-box {
+    display: block;
+    margin-right: 50px;
+    float: left;
+  }
+
   .section-homepage--module_two_column .container,
   .section-homepage--module_two_column .container .eight.columns { width: 100%; }
   .section-homepage--module_two_column .section-title--hed {
