--- a/snippets/snippet-homepage--our_story.liquid
+++ b/snippets/snippet-homepage--our_story.liquid
@@ -1,5 +1,5 @@
 <div class="alpha eight columns section-homepage--module section-homepage--our_story">
-  <a href="/page/about-us" class="content-box">
+  <a href="/pages/about-us" class="content-box">
     <h1 class="section-title--hed">We began with <span>A Big Goal</span></h1>
     <p class="section-title--dek">See our story</p>
   </a>
