removing bad javascript

--- a/assets/styles-v2.css.liquid
+++ b/assets/styles-v2.css.liquid
@@ -321,7 +321,7 @@ picture,img { max-width: 100%; }
    .slide4 .action_button {
 		margin: 5% 0 0 0;
    }
-  
+
 }
 @media only screen and (max-width: 959px) {
 	.slide3 .action_button {
@@ -330,7 +330,7 @@ picture,img { max-width: 100%; }
     .slide4 .action_button {
 		margin: 10% 0 0 0;
    }
-  
+
 }
 @media only screen and (max-width: 767px) {
   .slide .flex-caption .action_button {
@@ -344,7 +344,7 @@ picture,img { max-width: 100%; }
   .slide4 .action_button {
 		margin: 20% 0 0 0;
    }
-  
+
 }
 @media only screen and (max-width: 479px) {
 	.slide3 .action_button {
@@ -352,7 +352,7 @@ picture,img { max-width: 100%; }
     }
   .slide4 .action_button {
 		margin: 30% 0 0 0;
-   }  
+   }
 }
 @media only screen and (max-width: 321px) {
   .slide2 .headline {
@@ -395,6 +395,7 @@ picture,img { max-width: 100%; }
   display: inline-block;
   line-height: 0;
   z-index: 10;
+  padding-bottom: 40px;
 }
 .section-homepage--helping_hand .section-image:before,
 .section-homepage--helping_hand .section-image:after {
