--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -53,10 +53,6 @@
     <!-- Custom Fonts -->
     <link href='//fonts.googleapis.com/css?family=.|{% if settings.logo_typeface_method == "google_webfonts" %}{{ settings.logo_google_webfont_font }}:light,normal,bold|{% endif %}{% if settings.headline_typeface_method == "google_webfonts" %}{{ settings.headline_google_webfont_font }}:light,normal,bold|{% endif %}{% if settings.nav_typeface_method == "google_webfonts" %}{{ settings.nav_google_webfont_font }}:light,normal,bold|{% endif %}{% if settings.regular_typeface_method == "google_webfonts" %}{{ settings.regular_google_webfont_font }}:light,normal,bold{% endif %}' rel='stylesheet' type='text/css'>
 
-    {% comment %}
-    <link href="//fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    {% endcomment %}
-
     {% if template contains 'customer' %}
       {{ "shopify_common.js" | shopify_asset_url | script_tag }}
       {{ "customer_area.js"  | shopify_asset_url | script_tag }}
@@ -71,16 +67,17 @@
 
 
 </head>
-<body class="{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}">
-<!-- Our hidden input that stores the discount code value -->
-<input id="discount_input" type="hidden" name="discount" value="">
-<!-- Set the value of our hidden input field #discount-input to the value of our sessionStorage "discount" Variable -->
-<script>
-  (function() {document.getElementById("discount_input").value = sessionStorage.getItem("discount");}());
-</script>
+  <body class="{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}">
+
+    <!-- Our hidden input that stores the discount code value -->
+    <input id="discount_input" type="hidden" name="discount" value="">
+
+    <!-- Set the value of our hidden input field #discount-input to the value of our sessionStorage "discount" Variable -->
+    <script>
+      (function() {document.getElementById("discount_input").value = sessionStorage.getItem("discount");}());
+    </script>
 
     <div>
-
 
       {%include 'header-main' %}
 
@@ -104,39 +101,46 @@
     </div>
 
 
-      {% unless template contains "index" and settings.slideshow_enabled %}
-        <div class="container main content">
-      {% endunless %}
+    {% unless template contains "index" and settings.slideshow_enabled %}
+      <div class="container main content">
+    {% endunless %}
 
-      {% unless settings.featured_content_page == blank or template contains "index" %}
-        <div class="sixteen columns">
-          <div class="section clearfix featured_content">
-            {{ pages[settings.featured_content_page].content }}
-          </div>
+    {% unless settings.featured_content_page == blank or template contains "index" %}
+      <div class="sixteen columns">
+        <div class="section clearfix featured_content">
+          {{ pages[settings.featured_content_page].content }}
         </div>
-      {% endunless %}
-
-      {% if template contains 'list-collections' %}
-        {% include 'collection-listing' %}
-      {% else %}
-        {{ content_for_layout }}
-      {% endif %}
-
       </div>
+    {% endunless %}
 
-      {% include 'snippet-sub_footer' %}
-
-      {% include 'snippet-search' %}
+    {% if template contains 'list-collections' %}
+      {% include 'collection-listing' %}
+    {% else %}
+      {{ content_for_layout }}
+    {% endif %}
 
     </div>
 
+    {% include 'snippet-sub_footer' %}
+
+    {% include 'snippet-search' %}
+
+    </div>
+
+    <span style="display: none">something</span>
     {% include 'newsletter-popup' %}
 
     {% include 'currencies' %}
 
 
-  <!-- BEEKETINGSCRIPT CODE START -->
-    {% include 'bk-tracking' %}
-  <!-- BEEKETINGSCRIPT CODE END --></body>
+    <!-- BEEKETINGSCRIPT CODE START -->
+      {% include 'bk-tracking' %}
+    <!-- BEEKETINGSCRIPT CODE END -->
+
+
+
+
+
+  </body>
 
 </html>
