--- a/assets/styles-v2.css.liquid
+++ b/assets/styles-v2.css.liquid
@@ -157,6 +157,22 @@ picture,img { max-width: 100%; }
   color: #fff;
 }
 
+@media only screen and (max-width: 959px) and (min-width: 768px) {
+  .cart_count {
+    top: -3px;
+  }
+  .promo-banner .nav {
+    right: 15px;
+  }
+}
+
+@media only screen and (min-width: 960px) {
+  .cart_count {
+    left: 9px;
+    top: -3px;
+  }
+}
+
 
 /**/
 
@@ -243,6 +259,9 @@ picture,img { max-width: 100%; }
       	margin-top: 9px;
     }
 }
+
+
+
 
 /* --- Slideshow --- */
 .slide {}
@@ -425,7 +444,7 @@ picture,img { max-width: 100%; }
 }
 .section-homepage--helping_hand .section-image:after {
   right: -15px;
-  bottom: -15px;
+  bottom: 10px;
 }
 
 @media only screen and (max-width: 767px) {
@@ -446,7 +465,9 @@ picture,img { max-width: 100%; }
     order: 2;
     margin-left: auto;
     margin-right: auto;
-    max-width: 300px;
+    max-width: calc(100% - 60px);
+    padding-left: 30px;
+    padding-right: 30px;
   }
   .section-homepage--helping_hand .container div:last-child {
     -webkit-box-ordinal-group: 1;
@@ -469,6 +490,9 @@ picture,img { max-width: 100%; }
   .section-homepage--helping_hand .section-title--hed span {
     font-size: 86px;
   }
+  .section-homepage--helping_hand .section-image:after {
+    bottom: -30px;
+  }
 }
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   .section-homepage--helping_hand .section-title--hed span {
@@ -490,7 +514,7 @@ picture,img { max-width: 100%; }
   }
   .section-homepage--helping_hand .section-image:after {
     right: -15px;
-    bottom: -15px;
+    bottom: 5px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 959px) {
@@ -508,7 +532,7 @@ picture,img { max-width: 100%; }
   }
   .section-homepage--helping_hand .section-image:after {
     right: -15px;
-    bottom: -15px;
+    bottom: -25px;
   }
 }
 @media only screen and (min-width: 960px) and (max-width: 1199px) {
@@ -852,9 +876,9 @@ picture,img { max-width: 100%; }
     float: left;
     width: 178px;
     min-width: 0;
-  }  
+  }
 }
-@media only screen and (min-width: 768px) and (max-width: 1199px) { 
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
   	.section-homepage--module_two_column .content-box:after {
   		position: absolute;
   		width: calc(100% - 14px);
@@ -914,10 +938,6 @@ picture,img { max-width: 100%; }
 .sub-footer a:hover,
 .sub-footer a:visited { font-weight: normal; }
 
-.sub-footer a:hover{
-	color: #87D1D2;
-}
-
 
 .sub-footer a,
 .sub-footer a:visited,
@@ -926,6 +946,10 @@ picture,img { max-width: 100%; }
 .sub-footer .social_icons a:hover,
 .sub-footer .social_icons a:active,
 .sub-footer .social_icons a:visited { color: #8a8c8f; }
+
+.sub-footer a:hover{
+	color: #87D1D2;
+}
 
 .sub-footer a,
 .sub-footer a:hover,
